syntax = "proto2";

package yamcs.protobuf.influxdb;

option java_package = "org.yamcs.influxdb.api";
option java_outer_classname = "InfluxdbProto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";
import "yamcs/protobuf/archive/archive.proto";
import "yamcs/api/annotations.proto";
import "yamcs/api/httpbody.proto";
import "yamcs/protobuf/pvalue/pvalue.proto";
service InfluxdbApi
{


  rpc ConnectToDB(ConnectRequest) returns (ConnectionStatusResposnse)
   {
    option (yamcs.api.route) = {
      post: "/api/influxdb"
      body: "*"
    };
  }
  
    // List parameter history
  rpc ArchiveParameterHistory(ParameterHistoryRequest) returns (ConnectionStatusResposnse) {
    option (yamcs.api.route) = {
      get: "/api/influxdb/{instance}/parameters/{name*}"
    };
  }
}
message ParameterHistoryRequest {

  optional string instance = 1;
  

  optional string name = 2;
  
  optional google.protobuf.Timestamp start = 3;
  

  optional google.protobuf.Timestamp stop = 4;

  optional string processor = 5;
  
  optional string source = 6;

}
message ConnectionStatusResposnse {
  optional string name = 1;
}
message ConnectRequest {
  optional string link = 1;
  optional string bucket = 2;
  optional string token = 3;
  optional string org = 4;

}